# BibleStudyBuddyV2

./: .gitignore  Procfile  README.md  app.py  google_auth.py  import_studies.py  models.py  pyproject.toml  railway.yaml  replit.md  routes.py  supabase_schema.sql  text_analysis.py
attached_assets/: Pasted-ERROR-app-Exception-on-google-login-callback-GET-Traceback-most-recent-call-last-File-op-1750978886925_1750978886926.txt  Pasted-Study-21-1-Peter-1-13-16-Passage-1-Peter-1-13-16-Date-June-21-2025-Email-bdgillihan-gmail-com--1750952777392_1750952777394.txt  Pasted-TemplateSyntaxError-jinja2-exceptions-TemplateSyntaxError-Unexpected-end-of-template-Jinja-was-loo-1750954781320_1750954781321.txt  Pasted-UndefinedError-jinja2-exceptions-UndefinedError-enumerate-is-undefined-Traceback-most-recent-ca-1750954162952_1750954162954.txt  Pasted-UndefinedError-jinja2-exceptions-UndefinedError-moment-is-undefined-Traceback-most-recent-call--1750952954004_1750952954005.txt
instance/: temp.db
static/: style.css
templates/: base.html  dashboard.html  login.html  new_study.html  studies.html  study_detail.html
