[project]
name = "bible-study-buddy"
version = "0.1.0"
description = "A Flask web app for managing personal Bible study sessions with text analysis"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "oauthlib>=3.3.1",
    "requests>=2.32.4",
    "nltk>=3.9.1",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
]
